fix: Update submit and reset button styles for consistency and improved visibility

--- a/Mid Terrm/zHomePractice/QuizPractice/Design/style.css
+++ b/Mid Terrm/zHomePractice/QuizPractice/Design/style.css
@@ -72,7 +72,8 @@ input[type="submit"]{
     width: 50%;
     padding: 10px 20px;
     border-radius: 10px;
-    color: springgreen;
+    background-color: forestgreen;
+    color: rgb(255, 255, 255);
     border-color: darkgreen;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
@@ -80,8 +81,15 @@ input[type="submit"]{
     cursor: pointer;
 }
 input[type="reset"]{
-    mar
-    width: 100%;
-    color: darkgray;
-     
+    margin: auto;
+    width: 50%;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: silver;
+    color: rgb(0, 0, 0);
+    border-color: gray;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
 }
